--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "clean-css": "^4.1.11",
     "constantinople": "^4.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
